fix for hosting in path

--- a/client-web/src/app/app.component.html
+++ b/client-web/src/app/app.component.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
         <a class="navbar-brand" [routerLink]="['/']">
-                <img src="/assets/favicon.gif" /> Blink
+                <img src="assets/favicon.gif" /> Blink
         </a>
         <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
