--- a/client-web/src/app/blink-item/blink-item.component.html
+++ b/client-web/src/app/blink-item/blink-item.component.html
@@ -27,5 +27,5 @@
     </div>
   </div>
   <button class="btn btn-primary" type="submit" [disabled]="!submitForm.form.valid || formState.getValue() == FormState.Processing">Submit</button>
-  <img src="/assets/spinner.gif" *ngIf="formState.getValue() == FormState.Processing" />
+  <img src="assets/spinner.gif" *ngIf="formState.getValue() == FormState.Processing" />
 </form>
